--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <link rel="stylesheet" href="/style/index.css" />
     <link rel="stylesheet" href="/style/header/header.css" />
     <link rel="stylesheet" href="/style/main/main.css" />
+    <link rel="stylesheet" href="/style/footer/footer.css" />
+  </head>
   </head>
   <body>
     <div class="wrap">
+      <!-- 헤더영역 -->
       <header>
         <div class="logo">
           <h1>LOGO</h1>
@@ -50,7 +53,15 @@
       </main>
       
       <!-- 푸터영역 -->
-      <tooter></tooter>
+      <tooter>
+      <ul>
+        <li><a href="#">회사소개</a></li>
+        <li><a href="#">오시는길</a></li>
+        <li><a href="#">전화번호</a></li>
+        <li><a href="#">팩스</a></li>
+      </ul>
+      <p>(C) 2024. Wonjung all rights reserved.</p>
+      </tooter>
     </div>
 
     <script>
